--- a/probapps.css
+++ b/probapps.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
+@import url(https://fonts.googleapis.com/css?family=Lato:700);
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400&text=Shiny);
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200&text=byRStudio);
 
